# v2ray-monitor

./: .gitignore  Cargo.toml  Cross.toml  README.md  class.drawio  config.yaml  nohup.out  summary.md  trojan-r-sequence.drawio  v2ray-subscription.txt
docker/: Dockerfile
src/: config.rs  lib.rs  main.rs  node.rs  task.rs  tcp_ping.rs  v2ray.rs
src/client/: jinkela.rs  mod.rs
src/task/: check_network.rs  dns_flush.rs  filter.rs  jinkela_checkin.rs  mod.rs  subscription.rs  switch.rs  tcp_ping.rs  v2ray_task_config.rs  v2ray_tasks.rs
src/v2ray/: config.rs  node.rs
tests/: integration_test.rs
tests/data/: config.yaml  local-v2-config.json  v2ray-subscription.txt
