[package]
name = "router-tasks"
version = "0.1.0"
authors = ["navyd <dhjnavyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
clippy = "0.0"
bytes = "1.0"
async-compat = "0.2"
smol = "1.2"
futures = "0.3"
base64 = "0.13"
easy-parallel = "3.1"
num_cpus = "1.13"
surf = "2.1.0"
async-h1 = "2.3"
http-types = "2.10"
async-tls = "0"

[dev-dependencies]
ctor = "0.1"
