[package]
name = "router-tasks"
version = "0.1.0"
authors = ["navyd <dhjnavyd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.8"
bytes = "1.0"
futures = "0.3"
base64 = "0.13"
num_cpus = "1.13"
rand = "0.8"
tokio = {version = "1.1", features = ["process", "rt", "rt-multi-thread", "macros", "fs", "io-std", "time"]}
# tokio = {version = "1.1", features = ["full"]}
reqwest = { version = "0.11", features = ["socks"]}
time = "0.2"
once_cell = "1.5"
regex = "1.4"
# openssl = { version = "0.9.60", features = ["vendored"] }
thiserror = "1.0"
structopt = "0.3"

[dev-dependencies]
ctor = "0.1"

[profile.release]
panic = "abort"
